<?xml version="1.0"?>
<package format="3">
  <name>cadrl_ros</name>
  <version>0.0.0</version>
  <description>The cadrl_ros package (ROS 2 version)</description>

  <maintainer email="mfe@mit.edu">Michael Everett</maintainer>
  <license>TODO</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Optional: if you have Python launch files or scripts -->
  <exec_depend>python3</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
